add log.error for createUser functionality; turn off security auto configuration to turn off login request to test on postman (temporary)

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,4 +1,6 @@
 spring:
+  autoconfiguration:
+    exclude: org.springframework.boot.autoconfigure.security.servlet.SecurityAutoConfiguration # Turn off security auto configuration
   datasource:
     url: jdbc:mysql://localhost:3306/securecapita
     password: iamdaghuy
