--- a/pom.xml
+++ b/pom.xml
@@ -71,6 +71,20 @@
 			<artifactId>spring-security-test</artifactId>
 			<scope>test</scope>
 		</dependency>
+		<dependency>
+			<groupId>org.apache.commons</groupId>
+			<artifactId>commons-lang3</artifactId>
+			<version>3.20.0</version>
+		</dependency>
+		<!--
+			Chức năng chính: random số, random chữ, random mix (cả số lẫn chữ)
+		-->
+		<dependency>
+			<groupId>com.twilio.sdk</groupId>
+			<artifactId>twilio</artifactId>
+			<version>11.1.0</version>
+		</dependency>
+		<!-- Hỗ trợ chức năng gửi sms, gọi điện thoại -->
 	</dependencies>
 
 	<profiles>
