--- a/src/main/resources/application-dev.yml
+++ b/src/main/resources/application-dev.yml
@@ -1,3 +1,5 @@
+jwt:
+  secret: thisissupersecret
 spring:
   #autoconfiguration:
    # exclude: org.springframework.boot.autoconfigure.security.servlet.SecurityAutoConfiguration # Turn off security auto configuration
